--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "npx expo start",
     "android": "npx expo run:android",
     "ios": "npx expo run:ios",
-    "build": "expo build:web",
+    "build": "npx expo export:web",
     "web": "npx expo start --web"
   },
   "dependencies": {
