--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "npx expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/slider": "4.5.6",
@@ -33,12 +34,13 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "*",
     "react-native-webview": "13.13.5",
-    "sonner-native": "0.19.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "sonner-native": "0.19.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/webpack-config": "^19.0.1",
     "@types/react": "~18.2.14",
+    "expo-cli": "^6.3.12",
     "typescript": "^5.1.3"
   },
   "license": "0BSD",
